[tool.poetry]
name = "convbump"
version = "0.1.1"
description = "Manage changelog and bump project version number using conventional commits from latest git tag."
authors = ["Max Kovykov <kovykmax@gmail.com>", "Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Luminaar/convbump"
packages = [
  {include = "convbump", from = "src"},
]
keywords = ["changelog", "conventional commit", "bump", "version", "calver", "semver", "pre release"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=20.2.0,<22"
toml = "^0.10.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
time-machine = "^2.1.0"
poethepoet = "^0.10.0"
black = "21.7b0"
isort = "^5.9.3"

[tool.poetry.scripts]
convbump-version = "convbump.app:version"
convbump-changelog = "convbump.app:changelog"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
