[tool.poetry]
name = "convbump"
version = "0.1.0"
description = "Tool for Conventional Commits"
authors = ["Max Kovykov <maxim.kovykov@avast.com>"]
packages = [
    {include="convbump", from="src"}
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.2"
pytest-mypy = "^0.8.0"
pytest-pylint = "^0.18.0"
poethepoet = "^0.10.0"
black = "21.6b0"
isort = "^5.9.1"

[tool.poetry.scripts]
convbump = "convbump.__main__:main"

[tool.pytest.ini_options]
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]


[tool.pylint.master]
good-names = "logger,e,i,j,n,m,f,_"

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-pass,
    broad-except,
    bare-except
    """
ignored_argument_names = "_.*|^ignored_|^unused_|args|kwargs"

[tool.mypy]
strict = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
