[tool.poetry]
name = "convbump"
version = "1.0.0"
description = "Tool for Conventional Commits"
authors = ["Max Kovykov <maxim.kovykov@avast.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["changelog", "conventional commit", "bump", "version", "calver"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed"
]
packages = [
    {include="convbump", from="src"}
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
semver = "^3.0.2"
click = "^8.1.7"
dulwich = "^0.21.7"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-mypy = "^0.10.3"
pytest-pylint = "^0.21.0"
poethepoet = "^0.25.0"
black = "^24.3.0"
isort = "^5.9.1"

[tool.poetry.scripts]
convbump = "convbump.__main__:convbump"

[tool.pytest.ini_options]
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml --mypy"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]


[tool.pylint.master]
good-names = "logger,e,i,j,n,m,f,_"

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-pass,
    broad-except,
    bare-except
    """
ignored_argument_names = "_.*|^ignored_|^unused_|args|kwargs"

[tool.mypy]
strict = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
